# iagotchi-lasti

./: .gitignore  .project  .pydevproject  IAGOTCHI.command  Iagotchi.desktop  MainGui.py  README.md  SimpleMainGui.py  docker-compose.yml  install_puredata.sh  requirements.txt
data/: config.json  g527092019.json  rencontre27092019.json  rencontre27092019.txt  rules_data_iagotchi.json  texts.sent
docs/: documentation.odt
iagotchi-bot/: CMakeLists.txt  Dockerfile  botresponse.py  bottle.py  chatscript.py  chatscript_externals.py  chatscript_settings.py  chrono.py  combinaisons.py  combinaisons_rules.txt  data.py  editor.html  entrypoint-iagotchi.sh  extract_interjections.py  get_sentences_from_rules.py  iagotchi-bot.kdev4  iagotchiGUI.py  index.html  lima.py  log.py  main.py  model.py  osc.py  preprocessing.py  process_log.py  pyosc.py  requirements.txt  rule_generator.py  rules.py  similarity.py  similarity_test.txt  synthese.py  test_chatscript.py  test_database.py  test_dumpjson.py  test_generator.py  test_lima.py  test_synthese.py  wiki.py  wiki_text_nlp.py
iagotchi-bot/.kdev4/: iagotchi-bot.kdev4
iagotchi-bot/IaGenerator/: README.md  coexistence2_config.json  coexistence2_vocab.json  coexistence2_weights.hdf5  coexistence_config.json  coexistence_weights.hdf5  generate.py  iagotchi_neww_config.json  iagotchi_neww_vocab.json  parameters-coex.json  parameters.json  requirements.txt  train.py
iagotchi-bot/IaGenerator/datasets/: coexistence.txt
iagotchi-bot/IaGenerator/textgenrnn/: textgenrnn.py
iagotchi-bot/Resources/: CMakeLists.txt
iagotchi-bot/Resources/RAWDATA/: CMakeLists.txt  filesiagotchi.txt  filesiagotchig5.txt
iagotchi-bot/Resources/RAWDATA/IAGOTCHI/: CMakeLists.txt  iagotchi_concepts.top  introductions.top  relance.top  simplecontrol.top
iagotchi-bot/Resources/RAWDATA/IAGOTCHIG5/: CMakeLists.txt  articles.top  g5.top  g5_questions.top  g5_subtopic1.top  g5_subtopic2.top  g5_subtopic3.top  iagotchi_concepts.top  introductions.top  questionphilosophique.top  relance.top  simplecontrol.top
iagotchi-bot/data/: base de données G5 - corrigée.txt  bd_iagotchi.txt  config.docker.json  config.json  g5.txt  g527092019.txt  rencontre.txt  responses.pkl  ww.txt
iagotchi-bot/db/: __init__.py  base.py  themes.py  user.py
iagotchi-bot/generator/: __init__.py  generator.py  iagotchi.model  test_generator.py  wordlist.3-5ans.txt
iagotchi-bot/text_generator/: TextGenerator.py  lib.json  training.py
iagotchi-bot/text_generator/data/: iagotchi.txt
